2010-06-29  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: If the ItemsPresenter changes on an
	  ItemsControl we should clear the children on the old
	  presenter before using the new one. Fixes part of cs2.

2010-06-23  Alan McGovern  <amcgovern@novell.com>

	* ItemsPresenter.cs: ItemsPresenter may be in the
	  ControlTemplate for an item which is *not* an ItemsControl.
	  In this case we just do nothing instead of throwing an
	  InvalidCastException.

2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Rewrite TemplateBindings to not be
	  leaky. We have to be careful to not store a reference to the
	  template owner otherwise we end up with a reference cycle
	  and cannot ever GC the source or target of the
	  TemplateBinding.

2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* ContentControl.cs: Nuke the 'ContentControlChangedEventArgs'
	  class as nothing ever actually uses it.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* TextBox.cs:
	* Control.cs:
	* PasswordBox.cs:
	* RichTextBox.cs:
	* RichTextArea.cs:
	* WebBrowserBrush.cs: Updated to SL4 final API.

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* ValidationError.cs: Error content is an object not a string.
	  Change the constructor to reflect that.

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* ValidationError.cs: We need to copy the exception message as
	  the error content.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* ValidationError.cs: Put in initial support for
	  IDataErrorInfo objects. Passes the basic tests in drt 232.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* Validation.cs: We now pass all the V3 Validation tests in
	  drt 232. hurrah!

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* ItemCollection.cs: Implment INCC properly for the Items
	  collection. I can't believe no tests every checked this :)

2010-06-01  Sebastien Pouliot  <sebastien@ximian.com>
